--- a/index.html
+++ b/index.html
@@ -1,53 +1,39 @@
 <!-- Location Buddy Page -->
 <!-- Shows ARCBS locations of various types and hospitals -->
-<!-- This is a viewer app only. Data stored prepared, imported and parsed prior. -->
+<!-- This is a viewer app only. Data transformed and stored in Firestore, imported and parsed prior. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <title>ARCBS Location Buddy</title>
-    <style>
-      /*Always set the map height explicitly to define the size of the div element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        font-family: Arial, sans-serif;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <div id="map"></div>
-  <script>
-    var map;
-    // Constructor creates a new map instance with only center and zoom needed
-    function initMap() {
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: -34.397, lng: 150.644},
-        zoom: 5
-      });
-      // Static marker code
-      var melbourne = {lat: -37.813628, lng: 144.963058};
-      var marker = new google.maps.Marker({
-        position: melbourne,
-        map: map,
-        animation: google.maps.Animation.BOUNCE,
-        title: 'This is MELBOURNE'
-      });
-    }
-  </script>
-  <!-- Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyBmIHgGgte-OAjIEw4zjeYDWiz3nTFruuQ&v=3&callback=initMap" async defer></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <!-- Firebase and Cloud Firestore -->
+  <div class="container">
+    <h3>Australian Red Cross Location Buddy</h3>
+    <div class="options-box">
+      <!-- Source: W3CSchools Filtered List example -->
+      <input type="text" id="myInput" onkeyup="viewModel.searchBar()" placeholder="Search for names..">
+      <ul id="myUL">
+      </ul>
+    </div>
+    <div id="map"></div>
+  </div>
+  
+  <!-- Firebase and Cloud Firestore file BEFORE script.js so can use it in script.js -->
   <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-firestore.js"></script>
+  <!-- jQuery first so can use document ready in script.js -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <!-- Knockout via a CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+  <!-- Javascript external file AFTER the map div, but BEFORE Google Maps and libraries in body at bottom -->
+  <script src="js/mapStyles.js"></script>
   <script src="js/script.js"></script>
-    
+  <!-- Google Maps JavaScript API -->
+  <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyBmIHgGgte-OAjIEw4zjeYDWiz3nTFruuQ&v=3&callback=initMap" async defer></script>
+  
 </body>
 </html>
