We-wrote the whole thing and reorganised code.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   <script src="js/mapStyles.js"></script>
   <script src="js/script.js"></script>
   <!-- Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyBmIHgGgte-OAjIEw4zjeYDWiz3nTFruuQ&v=3&callback=initMap" async defer></script>
+  <!-- <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLURqHPD-BQAbH2sTtAZTLesMwHQpiOMs&v=3&callback=initMap">
+  </script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLURqHPD-BQAbH2sTtAZTLesMwHQpiOMs&v=3&callback=initMap"></script>
   
 </body>
 </html>
