--- a/NeighbourhoodMap.html
+++ b/NeighbourhoodMap.html
@@ -10,16 +10,17 @@
       <div class="options-box">
         <h1>Neighbourhood Map</h1>
         <h2>Washington D.C.</h2>
-        <div>
+        <!-- <div>
           <input id="show-listings" type="button" value="Show Listings">
           <input id="hide-listings" type="button" value="Hide Listings">
-        </div>
+        </div> -->
         <hr>
         <div class="searchbox">
           <span class="text">Search</span>
-          <input id="places-search" type="text" onkeyup="viewModel.searchBar()" placeholder="Search for places">
-          <input id="go-places" type="button" value="Go">
-          <ul id="myUL">
+          <input id="places-search" type="text" onkeyup="viewModel2.searchBar()" placeholder="Search for places">
+          <!-- <input id="go-places" type="button" value="Go"> -->
+          <ul id="myUL" data-bind="foreach: locationList">
+            <li data-bind="click: $root.setCurrentLocation, text: $data.name"></li>
           </ul>
         </div>
       </div>
